# NuevoGaleno

./: .gitignore  ADDING_FEATURES_GUIDE.md  AGENDA_MODULE.md  CONFIG_SCHEMA_UPDATE.yml  DOC_CONVERSION_SYSTEM.md  ERROR_LOGGING_SYSTEM.md  FIRST_PARTY_PLUGINS.md  GUIA_USUARIO.md  IMPORT_ARCHITECTURE.md  JWT_AUTHENTICATION.md  KIOSK_SYSTEM.md  LICENSING_QUICKSTART.md  LICENSING_SYSTEM.md  LICENSING_VARIANTS_CONFIG.md  MEDICAL_VIEW_SYSTEM.md  MENUBAR_SYSTEM.md  MULTI_NODE_ARCHITECTURE.md  ODONTOGRAMA_CORRECCIONES.md  ODONTOGRAMA_MEJORADO.md  ODONTOGRAMA_MIXTO_MULTITRATAMIENTO.md  PLUGIN_API_REFERENCE.md  PLUGIN_DATABASE_STORAGE.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_EXAMPLE.md  PLUGIN_SYSTEM.md  README.md  SOLUCION_IMPLEMENTADA.md  TEMPLATE_SYSTEM.md  TRATAMIENTOS_HUERFANOS.md  UPDATER_CHECKLIST.md  UPDATER_SETUP.md  index.html  package.json  pnpm-lock.yaml  setup-updater.ps1  tailwind.config.cjs  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: config_schema.yml  plugin_store_catalog.json
src-tauri/src/: discovery.rs  global.rs  importer.rs  integrations.rs  lib.rs  licensing.rs  main.rs  plugins.rs  pxlib.rs  pxlib_wrapper.rs  session.rs  wizard.rs
src-tauri/src/api/: mod.rs  routes.rs  server.rs
src-tauri/src/config/: mod.rs  schema.rs  validation.rs
src-tauri/src/db/: appointments.rs  config.rs  db_explorer.rs  integrations.rs  intellisense.rs  migrations.rs  mod.rs  odontogram_surfaces.rs  odontogram_tooth_treatments.rs  odontograms.rs  path.rs  patients.rs  users.rs  (+5 more)
(+214 files in other folders)
