[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "nuevogaleno"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "nuevogaleno_lib"

[build-dependencies]
bindgen = "0.65"
cc = "1.0"
tauri-build = {version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = {version = "0.4", default-features = false, features = ["alloc", "clock"] }
dirs = "5"
encoding_rs = "0.8"
libc = "0.2"
log = "0.4"
once_cell = "1"
rusqlite = {version = "0.29", features = ["bundled"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = {version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tempfile = "3"
walkdir = "2"
zip = "0.6"
